--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,5 +110,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["."]
+  "include": ["."],
+  "typeAcquisition": {
+    "enable": true
+  }
 }
